# 91cows

./: README.md
Bot/: .gitignore  Libraries.txt  Links.txt  MotorBlock.stl  MotorBlockV2.stl  Schema.asc  Stuff.txt  testBT.ino
Bot/Models/: ARMarkerBatterypackConnector.stl  ArduinoHolder.stl  BallWheel.stl  BatterypackAddon.stl  FrontWheelHolder.stl  ModelPrintSettings.txt  Models.url  MotorBlock.stl  Prototype1.stl  Prototype2.stl  StepperMotorModel.stl  WheelChassis.stl
Bot/Schema/: Eagle.url  LTSpice.url  mega pinout.brd  mega pinout.sch
Bot/testBT/: testBT.ino
BotController/: .gitattributes  .gitignore  README.md  package-lock.json  rush.json
BotController/common/config/rush/: pnpm-lock.yaml
BotController/control/localhost/: example.env  package.json
BotController/control/localhost/src/: remoteControl.ts
BotController/control/manual/: example.env  package.json  tsconfig.json
BotController/control/manual/src/: basicControl.ts
BotController/control/manual/src/test/: jest.test.ts
BotController/shared/bluetooth/: package.json  tslint.json
BotController/shared/bluetooth/src/: bluetoothConnection.ts  connectionTest.ts  findConnections.ts  index.ts
BotTrackerService/: .gitignore  ArucoTracker.py  BotTrackerMain.py  BotTrackerServiceMain.py  BotTrackerSimulator.py  CMakeLists.txt  CameraCalibration.py  Communicator.py  DataRecorder.py  FieldSetter.py  GlobalConstants.py  README.md  SimulatedServer.py  simulator_data.txt
BotTrackerService/app/: CMakeLists.txt  main.cpp
BotTrackerService/calib_data/: camera_calibration.yaml
GameService/: CMakeLists.txt
GameService/CollisionDetectionLib/: CMakeLists.txt  CollisionDetector.cpp  CollisionDetector.h
GameService/CommunicationLib/: CMakeLists.txt  GameOptions.cpp  GameOptions.h  MessageMediator.cpp  MessageMediator.h  MessageMediatorTcpSocket.cpp  MessageMediatorTcpSocket.h  RemoteControllerCommands.cpp  RemoteControllerCommands.h  main.cpp
GameService/FakeBotClient/: CMakeLists.txt  main.cpp
GameService/FakeBotDetectionService/: CMakeLists.txt  main.cpp
GameService/GameService/: ActionItem.cpp  ActionItem.h  BotClient.cpp  BotClient.h  BotClientCommunicator.cpp  BotClientCommunicator.h  BotClientSockets.cpp  BotClientSockets.h  BotInfo.cpp  BotInfo.h  BotLocationReceiver.cpp  BotLocationReceiver.h  BotTrackingService.cpp  BotTrackingService.h  BotTrackingServiceSocket.cpp  BotTrackingServiceSocket.h  CMakeLists.txt  Game.cpp  Game.h  GameOptions.cpp  GameOptions.h  GameRunner.cpp  GameRunner.h  RemoteAccessPoint.cpp  RemoteAccessPoint.h  RemoteControllerSocket.cpp  RemoteControllerSocket.h  TeamSettings.cpp  TeamSettings.h  VisualizationSocket.cpp  VisualizationSocket.h  VisualizerAccessPoint.cpp  VisualizerAccessPoint.h  VisualizerCommunicator.cpp  VisualizerCommunicator.h  main.cpp
GameService/GeometryLib/: CMakeLists.txt  LineSegment.cpp  LineSegment.h
GameService/MazeGenerator/: CMakeLists.txt  main.cpp
GameService/MazeLib/: BacktrackMazeGenerator.cpp  BacktrackMazeGenerator.h  CMakeLists.txt  Maze.cpp  Maze.h  MazeGenerator.h  MazePostProcessing.cpp  MazePostProcessing.h  MazeToAsciiArt.cpp  MazeToAsciiArt.h  RandomMazeGenerator.cpp  RandomMazeGenerator.h
GameService/RemoteController/: CMakeLists.txt  Main.qml  RemoteController.cpp  RemoteController.h  Spacer.qml  main.cpp  remoteController.qrc
JsonGenerator/: .gitignore  GenerateMazeJson.py
MazeSockitToMe/: MazeSockitToMe.sln  Readme.txt
MazeSockitToMe/MazeSockitToMe/: MazeSockitToMe.csproj  Program.cs
MazeSockitToMe/MazeSockitToMe/Properties/: AssemblyInfo.cs
PyBotController/: input.py  inquiry.py
Visualization/Artwork/: bot.xcf  car.tiff  dungeon.tiff  dungeon.xcf  ground_tileset.xcf  ground_tileset_pinstripe_walls.xcf  items_tileset.xcf
Visualization/SupportPlugins/: SupportPlugins.sln
Visualization/SupportPlugins/GameDataModel/: GameDataModel.csproj  Model.cs
Visualization/SupportPlugins/GameDataModel/Properties/: AssemblyInfo.cs
Visualization/SupportPlugins/PluginsTest/: JsonParsing.cs  PluginsTest.csproj
Visualization/SupportPlugins/PluginsTest/Properties/: AssemblyInfo.cs
Visualization/Unity/: .gitattributes  Readme.txt
Visualization/Unity/Maze/: Assembly-CSharp.csproj  Maze.csproj  Maze.sln  Unity.CollabProxy.Editor.csproj  Unity.Rider.Editor.csproj  Unity.TextMeshPro.Editor.csproj  Unity.TextMeshPro.csproj  Unity.VSCode.Editor.csproj  UnityEditor.TestRunner.csproj  UnityEngine.TestRunner.csproj
Visualization/Unity/Maze/Assets/Animations/: Bottle.anim  Bottle.controller  ChestEmpty.anim  ChestEmpty.controller  ChestTrap.anim  ChestTrap.controller  ChestTreasure.anim  ChestTreasure.controller  Coin.anim  Coin.controller  Spiketrap.anim  Spiketrap.controller  SpiketrapReverse.anim  Testtube.anim  Testtube.controller
Visualization/Unity/Maze/Assets/Palettes/: GroundPalette.prefab
Visualization/Unity/Maze/Assets/Plugins/: GameDataModel.dll.mdb
Visualization/Unity/Maze/Assets/Prefabs/: Bot.prefab  BotScoreItem.prefab  ChestEmpty.prefab  ChestTrap.prefab  ChestTreasure.prefab  Coin.prefab  Flask.prefab  Spiketrap.prefab  Testtube.prefab
Visualization/Unity/Maze/Assets/Scenes/: MainScene.unity
Visualization/Unity/Maze/Assets/Scripts/: DataModel.cs  LevelController.cs  Recorder.cs  Server.cs
Visualization/Unity/Maze/Assets/Sprites/: car.tiff
Visualization/Unity/Maze/Assets/Tiles/: ground_tileset_0.asset  ground_tileset_1.asset  ground_tileset_2.asset  ground_tileset_3.asset  ground_tileset_4.asset
Visualization/Unity/Maze/Assets/Tiles/GroundWall/: 0.asset  1.asset  2.asset  3.asset  4.asset  floor.asset
Visualization/Unity/Maze/Assets/Tilesheets/: ground_tileset.tiff
Visualization/Unity/Maze/ProjectSettings/: GraphicsSettings.asset  ProjectSettings.asset  TagManager.asset
